--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Product/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
         <div class="container-fluid">
             
                 <div class="col-sm-6">
-                    <h3>Ürün Bİlgileri</h3>
+                    <h3>Ürünler</h3>
                 </div>
             
         </div><!-- /.container-fluid -->
