--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using RhythmicRealm.UI
 @using RhythmicRealm.Shared.ViewModels.ProductViewModels
+@using RhythmicRealm.Shared.ViewModels.MainCategoryViewModels
+@using RhythmicRealm.Shared.ViewModels.SubCategoryViewModels
 @using RhythmicRealm.UI.Areas.Admin.AdminViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
